compiling_error.txt
/Users/alexaastorino/Desktop/School/ENSF 480/Lab2/exA/shape.cpp:8:51: error: member reference base type 'int' is not a structure or union
Shape::Shape(Point& p, char* c) : origin (p.getx(). p.gety()) {
                                          ~~~~~~~~^ ~
/Users/alexaastorino/Desktop/School/ENSF 480/Lab2/exA/shape.cpp:65:44: error: reference to non-static member function must be called; did you mean to call it with no arguments?
  double dist = getOrigin().distance(other.getOrigin);
                                     ~~~~~~^~~~~~~~~
                                                    ()
2 errors generated.
/Users/alexaastorino/Desktop/School/ENSF 480/Lab2/exA/square.cpp:7:9: error: out-of-line definition of 'Square' does not match any declaration in 'Square'
Square::Square(int xcord, int ycord, double length, char* name){
        ^~~~~~
/Users/alexaastorino/Desktop/School/ENSF 480/Lab2/exA/square.cpp:7:9: error: constructor for 'Square' must explicitly initialize the base class 'Shape' which does not have a default constructor
/Users/alexaastorino/Desktop/School/ENSF 480/Lab2/exA/shape.h:9:7: note: 'Shape' declared here
class Shape {
      ^
/Users/alexaastorino/Desktop/School/ENSF 480/Lab2/exA/square.cpp:8:18: error: expected ';' after expression
  Shape::Square()
                 ^
                 ;
/Users/alexaastorino/Desktop/School/ENSF 480/Lab2/exA/square.cpp:8:10: error: no member named 'Square' in 'Shape'
  Shape::Square()
  ~~~~~~~^
/Users/alexaastorino/Desktop/School/ENSF 480/Lab2/exA/square.cpp:14:53: error: no member named 'get_xcord' in 'Point'
  cout << "\nX-coordinate: " <<  Shape::getOrigin().get_xcord() << "\n";
                                 ~~~~~~~~~~~~~~~~~~ ^
/Users/alexaastorino/Desktop/School/ENSF 480/Lab2/exA/square.cpp:15:53: error: no member named 'get_ycord' in 'Point'
  cout << "\nY-coordinate: " <<  Shape::getOrigin().get_ycord() << "\n";
                                 ~~~~~~~~~~~~~~~~~~ ^
6 errors generated.
